--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,19 +1,22 @@
 name: free_mess
-description: "A new Flutter project."
+description: App de mensajería local para Cuba - MVP
 publish_to: 'none'
-version: 0.1.0
+version: 1.0.0+1
 
 environment:
-  sdk: ^3.8.1
+  sdk: ">=2.19.0 <3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
+  provider: ^6.1.1
+  sqflite: ^2.2.8          # Base de datos SQLite
+  path: ^1.8.3               # Almacenamiento local simple
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^5.0.0
+  flutter_lints: ^2.0.0
 
 flutter:
   uses-material-design: true
